syntax = "proto3";

option java_multiple_files = true;
option java_package = "src.proto.memtable";

package src.proto.memtable;

message MemTableKey {
  bytes key = 1;
}

message MemTableValue {
  bytes value = 1;
  bool tombstone = 2;
}